IVYPORTAL-8577IN PROGRESS71 sub-tasksNeeded features for release 8.0 II - Enhance UI global search: long text overlap search icon - Fixed UI of collapse/expand icon of fieldset

--- a/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
+++ b/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
@@ -784,11 +784,6 @@ _:-ms-fullscreen, :root .pe-dynaform-cell.input-text-field {
   padding-top: 0px !important;
 }
 
-body .ui-fieldset .ui-fieldset-legend .ui-fieldset-toggler {
-  width: 20px !important;
-  height: 20px !important;
-}
-
 .express-assignee-autocomplete .ui-autocomplete-input {
   padding-right: 20px !important;
 }
